--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link rel="stylesheet" href="css/css-reset.css">
     <link rel="stylesheet" href="css/comun.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <!--  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">-->
-
+    <script src="https://kit.fontawesome.com/233688c44a.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,6 +34,7 @@
                 <ul>
                     <li><a class="menu-enlace seleccionado" href="cuerpoInicio.html" title="Home">Home</a></li>
                     <li><a class="menu-enlace" href="cuerpoPortfolio.html" title="PortFolio">PortFolio</a></li>
+                    <li><a class="menu-enlace" href="cuerpoProyectos.html" title="Proyecto">Proyectos</a></li>
                     <li><a class="menu-enlace" href="cuerpoContacto.html"
                             title="Datos de contacto y redes sociales">Contacto</a></li>
                     <li><a class="menu-enlace" href="cuerpoPresupuesto.html" title="Pide un presupuesto">Presupuesto</a>
@@ -55,6 +55,7 @@
                         </li>
                         <li><a class="menu-enlace" href="cuerpoInicio.html" target="_self">Home</a></li>
                         <li><a class="menu-enlace" href="cuerpoPortfolio.html" target="_self">Portfolio</a></li>
+                        <li><a class="menu-enlace" href="cuerpoProyectos.html" title="PortFolio">Proyectos</a></li>
                         <li><a class="menu-enlace" href="cuerpoContacto.html" target="_self">Contacto</a></li>
                         <li><a class="menu-enlace" href="cuerpoPresupuesto.html" target="_self">Presupuesto</a></li>
                         <li><a class="menu-enlace" href="cuerpoLogin.html" title="Area de usuarios">Usuarios</a>
@@ -103,7 +104,9 @@
 <script src="js/clases.js"></script>
 <script src="js/scriptsLogin.js"></script>
 <script src="js/scriptAdmin.js"></script>
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>-->
+<script src="js/scriptsProyectos.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>-->
 
 </body>
 
