--- a/usuariosAdmin.html
+++ b/usuariosAdmin.html
@@ -132,7 +132,7 @@
                         </div>
                         <div class="unaColumna">
 
-                            <label for="foto"><img class="icono" src="ico/upload.svg" alt="icono upload">
+                            <label for="foto">Subir imagen del proyecto<img class="icono" src="ico/upload.svg" alt="icono upload">
                             </label><br><br>
 
                             <input type="file" class="input-formulario" id="foto" name="foto"
