maquetando el panel de noticias

--- a/cuerpoInicio.html
+++ b/cuerpoInicio.html
@@ -4,8 +4,15 @@
             <p id="disparador" >Noticias</p></a> 
             <div id="cajaNoticias"></div>                                 
         </div>        
-    </aside>            
+    </aside>   
+             
     <div id="contenedor-secundario" class="contenedor-secundario">
+<!--        <div>
+        <h2>Titular de la noticia</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam molestias totam magni facilis exercitationem sit tenetur eius aperiam consectetur accusantium asperiores, sequi dolorum ratione maiores similique recusandae id porro quam?</p>
+        <p>18/07/2021</p>
+        </div>
+    -->
         <section class="bienvenida">
             <h1>Hola!</h1>
             <p class="parrafo-bienvenida">
