correcion errores en nuevo usuario, se añade pass a la conexion

--- a/nuevoUser.html
+++ b/nuevoUser.html
@@ -5,7 +5,7 @@
 
         <p>
             <label for="NuevoUsuario">Usuario </label><br>
-            <input type="text" class="input-formulario NuevoUsuario" name="usuario" required
+            <input type="text" class="input-formulario" id="NuevoUsuario" name="usuario" required
                 onblur="ComprobarUser(this.value)">
             <span class="respuestaLogin"></span>
         </p>
